# VexEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  glad.c  premake5.lua  test.cpp  test1.cpp
include/: rendering.hpp  utils.hpp
libs/: glad.lua  glfw.lua  glm.lua  libs.lua
libs/glad/include/glad/: gl.h
src/: Application.cpp  Application.hpp  AssetManager.cpp  AssetManager.hpp  Audio.cpp  Audio.hpp  Buffer.cpp  IndexBuffer.cpp  IndexBuffer.hpp  Logging.hpp  Shader.cpp  Shader.hpp  Texture2D.cpp  Texture2D.hpp  Timestep.hpp  Utils.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  Window.cpp  Window.hpp  engine.hpp  log.hpp  main.cpp  openglstuff.cpp  rendering.cpp  rendering.hpp  test1.cpp
src/AssetManager/: AssetManager.cpp  AssetManager.hpp
src/asset_manager/: assets.cpp  assets.hpp
src/shaders/: vshader.glsl
